fix for shrink on mobile

--- a/plugins/bcew-blocks/src/cards/editor.scss
+++ b/plugins/bcew-blocks/src/cards/editor.scss
@@ -15,25 +15,11 @@
 
 @media (min-width: 782px) {
 
-    .bcew-blocks-cards.block-editor-block-list__layout {
-        row-gap: 0;
-        grid-template-columns: repeat(
-            var(--bcew-cards-columns, 3),
-            var(--bcew-cards-column-width, 22rem)
-        );
-
-        &.bcew-blocks-cards--count-2 {
-            --bcew-cards-columns: 2;
-            grid-template-columns: repeat(2, minmax(0, 1fr));
-        }
-
-        &.bcew-blocks-cards--count-4,
-        &.bcew-blocks-cards--count-5,
-        &.bcew-blocks-cards--count-6 {
-
-            > .block-editor-block-list__block:nth-child(-n + 3) {
-                margin-block-end: var(--bcew-cards-row-gap, 1.5rem) !important;
-            }
+    .bcew-blocks-cards.block-editor-block-list__layout.bcew-blocks-cards--count-4,
+    .bcew-blocks-cards.block-editor-block-list__layout.bcew-blocks-cards--count-5,
+    .bcew-blocks-cards.block-editor-block-list__layout.bcew-blocks-cards--count-6 {
+        > .block-editor-block-list__block:nth-child(-n + 3) {
+            margin-block-end: var(--bcew-cards-row-gap, 1.5rem) !important;
         }
     }
 }
